--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -34,6 +34,9 @@ services:
     #     arguments:
     #         $someArgument: 'some_value'
 twig:
+  strict_variables: '%kernel.debug%'
   globals:
         twigInformer: '@AppBundle\Service\TwigInformer'
         localLang: '@AppBundle\Service\LocalLanguage'
+        bulgarianLang: 'bg'
+        englishLang: 'en'
