--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -29,6 +29,10 @@ services:
         public: true
         tags: ['controller.service_arguments']
 
+    AppBundle\Service\ArticleDbManager:
+        arguments:
+        $em: '@Doctrine\ORM\EntityManagerInterface'
+
     # add more services, or override services that need manual wiring
     # AppBundle\Service\ExampleService:
     #     arguments:
