--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
 web/images/* linguist-vendored
-web/styles/plugins* linguist-vendored
-web/styles/styles* linguist-vendored
+web/styles/plugins/* linguist-vendored
+web/styles/styles/* linguist-vendored
 
