Overrode error pages 404 and 401. Visitors can not ask questions from the contact page. Thit will send Email to all admins as well as notify them in the website.

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -55,3 +55,4 @@ twig:
   globals:
         twigInformer: '@AppBundle\Service\TwigInformer'
         localLang: '@AppBundle\Service\LocalLanguage'
+        twigUtil: '@AppBundle\Util\TwigUtil'
