Users can change their profile images, description. Users can remove their account. Removing the account removes EVERYTHING related to them (files, articles etc...). Added notification support for comments and replies. Updated readme.md

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@
 /web/bundles/
 /web/node_modules/
 /web/node_modules/*
-/web/files/
-/web/files/*
+/web/files/users/*
+!/web/files/users/readme.txt
+
 **/.idea/
