Added php script that resets articles' daily_views (weekly). Also moved fp_app_id from config class to parameters.yml to make deployment easier

--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -15,6 +15,7 @@ parameters:
     mailer_user: ~
     mailer_password: ~
     mailer_port: ~
+    fb_app_id: 123456
 
     # A secret key that's used to generate certain security-related tokens
     secret: ThisTokenIsNotSoSecretChangeIt
