--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -45,6 +45,8 @@ security:
                 # The name of the route to redirect to after logging out
                 target: homepage
 
+            logout_on_user_change: true
+
 
     access_control:
         # this is a catch-all for the admin area
